# SFZero

./: .gitignore  CMakeLists.txt  README.md  run-cmake-mac.sh
src/: main.cpp
src/SFZero/: JuceSubstitution.h  RIFF.cpp  RIFF.h  SF2.h  SF2Reader.h  SFZDebug.h  SFZReader.h  SFZSample.h  SFZSound.h  SFZSynth.h  SFZVoice.h
